web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canvas-web
  labels:
    app: canvas-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canvas-web
  template:
    metadata:
      labels:
        app: canvas-web
    spec:
      containers:
      - name: canvas-web
        image: ainababs0/web
        args:
          - bundle
          - exec
          - puma
          - -C
          - config/puma.rb
        ports:
        - containerPort: 3000
      restartPolicy: Always
