web-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/canvas-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: RAILS_ENV
              value: "production"
            - name: POSTGRES_PASSWORD
              value: sekret
          image: ainababs0/web
          name: web
          ports:
            - containerPort: 3000  # Expose the port here
      restartPolicy: Always
