web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: localcanvasdev
spec:
  selector:
    io.kompose.service: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
